--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
     "APP_ENV": "production",
     "APP_DEBUG": "true",
     "APP_URL": "https://vercel.com/aminrannens-projects",
-    "APP_KEY": "=base64:ml3ujcVrRQozt0RUInA09FbfpupYFiHIaA6BB0AcdFc=",
+    "APP_KEY": "base64:ml3ujcVrRQozt0RUInA09FbfpupYFiHIaA6BB0AcdFc=",
     "APP_CONFIG_CACHE": "/tmp/config.php",
     "APP_EVENTS_CACHE": "/tmp/events.php",
     "APP_PACKAGES_CACHE": "/tmp/packages.php",
